refactor: rename openapi criteria enum
